# wg-vanity-key

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
src/: main.rs  nacl.rs  nacl2.rs  shader.comp  shader.comp.spv
