[package]
name = "wg-vanity-key"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
bytemuck = "1.14.0"
# core_affinity = "0.8.1"
rand = "0.8.5"
# rayon = "1.8.0"
# sodiumoxide = "0.2.7"
vulkano = "0.34.0"
# vulkano-shaders = "0.34.0"
